# TradingPlatform

./: CMakeLists.txt  README.md
exe/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  IBWrapper.cpp  IBWrapper.h  StartupManager.cpp  StartupManager.h  main.qml  qml.qrc  stdafx.h
src/Data/: ContractRepository.cpp  ContractRepository.h
src/Model/: MainModel.cpp  MainModel.h
src/Resources/: AboutWindow.qml  MainWindow.qml
src/ViewModel/: MainViewModel.cpp  MainViewModel.h
